<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="me.imwa.dictour.MainActivity" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
    	<EditText
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:hint="@string/main_search_hint"
        	android:layout_weight="1"
        	android:id="@+id/main_search" />
    	<Button android:text="@string/search"
        	android:id="@+id/main_search_button"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content" />
    </LinearLayout>
    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:fillViewport="true">
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/app_title"
        android:id="@+id/search_result" />
    </ScrollView>
    
</LinearLayout>