<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="me.imwa.dictour.MainActivity" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    	<EditText
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:hint="@string/main_search_hint"
        	android:id="@+id/manju_input" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:fillViewport="true">
        <LinearLayout
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:orientation="vertical">
    	    <TextView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:textSize="16sp"
		        android:text="@string/about_author"
		        android:id="@+id/about_author" />
    	    <TextView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:textSize="16sp"
		        android:text="@string/manju_text"
		        android:id="@+id/manju_font" />
    	</LinearLayout>
    </ScrollView>
    
</LinearLayout>